gradle.log
testCompile: zlibprj => C:\Users\uidf2687\.gradle\caches\modules-2\files-2.1\junit\junit\4.12\2973d150c0dc1fefe998f834810d68f278ea58ec\junit-4.12.jar
testCompile: zlibprj => C:\Users\uidf2687\.gradle\caches\modules-2\files-2.1\org.hamcrest\hamcrest-core\1.3\42a25dc3219429f0e5d060061f71acb49bf010a0\hamcrest-core-1.3.jar
testCompile: subprj1 => D:\casdev\git\sw.tool.gradle_test\build\classes\test
testCompile: subprj1 => D:\casdev\git\sw.tool.gradle_test\build\resources\test
testCompile: subprj1 => D:\casdev\git\sw.tool.gradle_test\zlibprj\build\libs\zlibprj.jar
testCompile: subprj1 => C:\Users\uidf2687\.gradle\caches\modules-2\files-2.1\junit\junit\4.12\2973d150c0dc1fefe998f834810d68f278ea58ec\junit-4.12.jar
testCompile: subprj1 => C:\Users\uidf2687\.gradle\caches\modules-2\files-2.1\org.hamcrest\hamcrest-core\1.3\42a25dc3219429f0e5d060061f71acb49bf010a0\hamcrest-core-1.3.jar
testCompile: subprj2 => D:\casdev\git\sw.tool.gradle_test\zlibprj\build\classes\test
testCompile: subprj2 => D:\casdev\git\sw.tool.gradle_test\zlibprj\build\resources\test
testCompile: subprj2 => D:\casdev\git\sw.tool.gradle_test\zlibprj\build\libs\zlibprj.jar
testCompile: subprj2 => C:\Users\uidf2687\.gradle\caches\modules-2\files-2.1\junit\junit\4.12\2973d150c0dc1fefe998f834810d68f278ea58ec\junit-4.12.jar
testCompile: subprj2 => C:\Users\uidf2687\.gradle\caches\modules-2\files-2.1\org.hamcrest\hamcrest-core\1.3\42a25dc3219429f0e5d060061f71acb49bf010a0\hamcrest-core-1.3.jar
:compileJava UP-TO-DATE
:processResources UP-TO-DATE
:classes UP-TO-DATE
:jar UP-TO-DATE
:assemble UP-TO-DATE
:compileTestJava UP-TO-DATE
:processTestResources UP-TO-DATE
:testClasses UP-TO-DATE
:test UP-TO-DATE
:check UP-TO-DATE
:build UP-TO-DATE
:zlibprj:compileJava UP-TO-DATE
:zlibprj:processResources UP-TO-DATE
:zlibprj:classes UP-TO-DATE
:zlibprj:jar UP-TO-DATE
:subprj1:compileJava UP-TO-DATE
:subprj1:processResources UP-TO-DATE
:subprj1:classes UP-TO-DATE
:subprj1:jar UP-TO-DATE
:subprj1:assemble UP-TO-DATE
:subprj1:compileTestJavaD:\casdev\git\sw.tool.gradle_test\subprj1\src\test\java\LibrarySub1Test.java:8: error: cannot find symbol
		LibraryZTest classZTest = new LibraryZTest();
		^
  symbol:   class LibraryZTest
  location: class LibrarySub1Test
D:\casdev\git\sw.tool.gradle_test\subprj1\src\test\java\LibrarySub1Test.java:8: error: cannot find symbol
		LibraryZTest classZTest = new LibraryZTest();
		                              ^
  symbol:   class LibraryZTest
  location: class LibrarySub1Test
2 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':subprj1:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 1.088 secs
